# llzk-lean

./: .gitignore  EmitCerts.lean  LICENSE  LlzkLean.lean  README.md  lake-manifest.json  lakefile.toml
.github/workflows/: certify.yml  differential.yml
LlzkLean/: Cert.lean  CertValidate.lean
certs/: felt-combine.cert.json
checker/: CMakeLists.txt  README.md
checker/src/: CertChecker.cpp  CertChecker.h  JsonParser.cpp  JsonParser.h  OperandPath.cpp  OperandPath.h  VerifyRewritesPass.cpp
checker/tests/: test_loader.cpp
differential/: README.md  run-differential.sh
differential/corpus/: README.md
differential/corpus/expected-divergence/: named_field_const.mlir  types_smoke.llzk
differential/corpus/felt/: const_identities.mlir
docs/: README.md  future-b-extraction.md  future-c-drop-in.md  future-d-ffi-plugin.md  future-f-folders-only.md  strategy-a-oracle.md  strategy-e-certificates.md
